[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GDEditor/Resources/Icons/TripleBar.png" type="Texture" id=1]
[ext_resource path="res://addons/GDEditor/Scenes/ValueArrayItem.gd" type="Script" id=2]

[node name="ValueArrayItem" type="PanelContainer"]
margin_right = 193.0
margin_bottom = 28.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 186.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragBtn" type="ToolButton" parent="HBoxContainer"]
margin_right = 28.0
margin_bottom = 24.0
mouse_filter = 1
action_mode = 0
keep_pressed_outside = true
icon = ExtResource( 1 )
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndexLabel" type="Label" parent="HBoxContainer"]
margin_left = 32.0
margin_top = 5.0
margin_right = 72.0
margin_bottom = 19.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "0"
align = 1
valign = 1

[node name="ValueEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 76.0
margin_right = 179.0
margin_bottom = 24.0
mouse_filter = 1
size_flags_horizontal = 3

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/DragBtn" to="." method="_on_DragBtn_pressed"]
